[gd_scene load_steps=7 format=2]

[ext_resource path="res://Shader_Stuff/SmoothPixelFiltering/SmoothPixel.tres" type="Material" id=1]
[ext_resource path="res://Actors/Item/Teleport/Teleport.gd" type="Script" id=2]
[ext_resource path="res://GUI/MultiPlayerMenu/MultiPlayerPopupMenu.tscn" type="PackedScene" id=3]

[sub_resource type="StreamTexture" id=22]
flags = 4
load_path = "res://.import/teleport_sheet.png-2c03cf1c75b59d634b72a0571a987fc2.stex"

[sub_resource type="Animation" id=24]
resource_name = "新建动画"
length = 2.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TeleportSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 7.5, 19 )

[node name="Teleport" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="TeleportSprite" type="Sprite" parent="."]
material = ExtResource( 1 )
texture = SubResource( 22 )
hframes = 22

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "新建动画"
"anims/新建动画" = SubResource( 24 )

[node name="AreaShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 25 )

[node name="Hitbox" type="StaticBody2D" parent="."]

[node name="HitboxShape2D" type="CollisionPolygon2D" parent="Hitbox"]
position = Vector2( 0, 15 )
build_mode = 1
polygon = PoolVector2Array( -10, 10, -8.5, 8, 8.5, 8, 10, 10 )

[node name="MultiPlayerPopupMenu" parent="." instance=ExtResource( 3 )]
margin_left = -33.6257
margin_top = -101.674
margin_right = 101.374
margin_bottom = 31.3257
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="." to="." method="_on_Teleport_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Teleport_body_exited"]
